test/files/neg/early-type-defs.check
early-type-defs.scala:4: warning: early initializers are deprecated; they will be replaced by trait parameters in 3.0, see the migration guide on avoiding var/val in traits.
object Test extends { type A1 = Int } with Runnable { def run() = () }
                    ^
early-type-defs.scala:4: warning: early type members are deprecated: move them to the regular body; the semantics are the same
object Test extends { type A1 = Int } with Runnable { def run() = () }
                           ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
